tests/lustre/typechecking/shouldPass/test_node_eqn_with_pre_not_circular.lus
node a (x: int) returns (y: int);
var p:int;
var q:int;
let
   q = pre p;
   p = q;
tel

node b (x: int) returns (y: int);
var p: int;
var q: int;
let
   q = pre p;
   p = pre q;
tel
