tests/lustre/typechecking/shouldFail/machine_integer_02.lus

node top(x1, x2: int) returns (y:int);
let
   y = x1 && x2;
tel